# pbg-uq

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
examples/: synthetic_demo.py  v2ecoli_demo.py
pbg_uq/: __init__.py  cache.py  core.py  emit.py  io.py  report.py  results.py  sampling.py  uqpc.py
pbg_uq/adapters/: __init__.py  base.py  callable.py  pbg.py
tests/: test_cache.py  test_callable_adapter.py  test_emit.py  test_forward_uq.py  test_paths.py  test_pbg_adapter.py  test_report.py  test_results.py  test_sampling.py  test_uqpc_ishigami.py
