[project]
name = "pbg-uq"
version = "0.1.0"
description = "Portable forward uncertainty quantification (PCE + Sobol) for process-bigraph"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pytuq[all]>=1.0.0",
    "process-bigraph",
    "bigraph-schema",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pbg_uq"]
