[project]
name = "pbg-uq"
version = "0.1.0"
description = "Portable forward uncertainty quantification (PCE + Sobol) for process-bigraph"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pytuq[all]>=1.0.0",
    "process-bigraph",
    "bigraph-schema",
    "pbg-emitters[xarray]",
    "polars",
]

# pbg-emitters is not on PyPI; resolve it from the GitHub repo (the
# decouple-ecoli + RunReader partition fix is on main as of PR #10).
# For local development, override with an editable install:
#   uv pip install -e /path/to/pbg-emitters --no-deps
[tool.uv.sources]
pbg-emitters = { git = "https://github.com/vivarium-collective/pbg-emitters.git", branch = "main" }

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pbg_uq"]
